--- a/css/styles.less
+++ b/css/styles.less
@@ -4,15 +4,30 @@
 html.easy-sidebar-active {height: 100%; overflow-x: hidden; overflow-y: scroll; margin: 0; padding: 0; }
 body{font-family: 'Roboto', sans-serif; font-size: 14px; min-height: 100%; margin: 0; padding: 0; } 
 #mContainer {transition: 0.2s ease; min-height: 100%;} 
-#mContainer.toggled {position:fixed; -webkit-transform: translateX(250px); transform: translateX(250px); }
+#mContainer.toggled {position:fixed; -webkit-transform: translateX(300px); transform: translateX(300px); }
 .overlayNav {display: none; z-index: 998; position: fixed; top:0; left:0; background-color: rgba(0,0,0,0.8); width: 100%; height: 100%}
-#back-to-top {background: @color1; color: contrast(@color1); position: fixed; bottom: 80px; right: 15px; z-index: 9999; width: 32px; height: 32px; text-align: center; line-height: 30px; cursor: pointer; border: 0; text-decoration: none; display: none; border-radius: 50%; }
+#back-to-top {background: @color1; color: contrast(@color1); position: fixed; bottom: 80px; right: 15px; z-index: 9999; width: 40px; height: 40px; text-align: center; line-height: 40px; cursor: pointer; border: 0; text-decoration: none; display: none; border-radius: 50%; }
 .fixed{position: fixed; top:0; left:0; width: 100%; z-index: 999;}
 .fixed .shortNav{background:#e8e8e8}
 /*.fixed .shortNav .listing_icon{color:#fff; font-weight: 300}*/
-.fixed .shortNavList{padding:5px 0 25px}
+.fixed .shortNavList{padding:8px 0}
 
-.colorpicker-component{position: absolute; right: 0; top: 50%;  padding: 0}
+
+
+.shortNav{overflow: hidden; background-color: #fff; float: left; width: 100%; text-align: center;}
+.shortNav .listing a{color:#333; display: block;}
+.shortNav .listing_heading{font-size:15px;}
+
+.shortNavList{padding: 15px 0; margin:0; white-space: nowrap; overflow: hidden; overflow-x: auto;}
+.shortNav .listing{display: inline-block; float: none; padding:0 15px}
+.shortNav .listing_icon{color:#222; font-size: 15px; border-radius: 50%; width:30px; height: 30px; line-height:20px; padding:5px; display: inline-block;/*  border: solid 1px #dadada;*/}
+
+.shortNav .listing_heading{margin:10px 0 0 0; display: none;}
+
+
+
+
+.colorpicker-component{position: absolute; right: 0; top: 50%;  padding: 0; z-index: 999;}
 .colorpicker-component .input-group-addon{background-color: transparent; border:0; width: auto; z-index: 999; padding: 0}
 .colorpicker-component .input-group-addon i{color:contrast(@color1); background-color: @color1; width:auto; height: auto; padding: 10px; border-radius: 5px 0 0 5px; display: block;}
 
@@ -30,10 +45,10 @@ body{font-family: 'Roboto', sans-serif; font-size: 14px; min-height: 100%; margi
 .navbar-toggle.active .icon-bar:nth-of-type(3) {top: -6px; transform: rotate(-45deg);}
 
 
-.navbar.easy-sidebar{background-color:#fff; box-shadow: 2px 0 15px rgba(0,0,0,0.2); color:#222; transition: 0.2s ease; position: absolute;  width: 250px; top: 0; left: -250px; min-height: 100%; border-radius: 0; margin: 0; z-index: 9999; border:0; }
+.navbar.easy-sidebar{background-color:#fff; box-shadow: 2px 0 15px rgba(0,0,0,0.2); color:#222; transition: 0.2s ease; position: absolute;  width: 300px; top: 0; left: -300px; min-height: 100%; border-radius: 0; margin: 0; z-index: 9999; border:0; }
 .navbar.easy-sidebar .navbar-nav{margin: 0;}
 .navbar.easy-sidebar .navbar-header{background-color:@color1; color:contrast(@color1); width: 100%}
-.navbar.easy-sidebar.toggled {height:100%; -webkit-transform: translateX(250px); transform: translateX(250px); }
+.navbar.easy-sidebar.toggled {height:100%; -webkit-transform: translateX(300px); transform: translateX(300px); }
 .navbar.easy-sidebar .navbar-nav>.active>a{ border-color:#ff9800;  border-color:spin(@color1, 188); background-color:#222; color:#fff;}
 .navbar.easy-sidebar .navbar-nav>li>a{padding:13px 15px; border-left:solid 8px #fff; color:#333;}
 .navbar.easy-sidebar .navbar-nav>li>span{padding:13px 15px; border-left:solid 8px #fff; display: block;}
