--- a/css/styles.less
+++ b/css/styles.less
@@ -45,7 +45,7 @@ body{font-family: 'Roboto', sans-serif; font-size: 14px; min-height: 100%; margi
 .navbar-toggle.active .icon-bar:nth-of-type(3) {top: -6px; transform: rotate(-45deg);}
 
 
-.navbar.easy-sidebar{background-color:#fff; box-shadow: 2px 0 15px rgba(0,0,0,0.2); color:#222; transition: 0.2s ease; position: absolute;  width: 300px; top: 0; left: -300px; min-height: 100%; border-radius: 0; margin: 0; z-index: 9999; border:0; }
+.navbar.easy-sidebar{background-color:#fff; box-shadow: 2px 0 15px rgba(0,0,0,0.2); color:#222; transition: 0.2s ease; position: absolute;  width: 300px; top: 0; left: -300px; min-height: 100%; height: 100vh; border-radius: 0; margin: 0; z-index: 9999; border:0; }
 .navbar.easy-sidebar .navbar-nav{margin: 0;}
 .navbar.easy-sidebar .navbar-header{background-color:@color1; color:contrast(@color1); width: 100%}
 .navbar.easy-sidebar.toggled {height:100%; -webkit-transform: translateX(300px); transform: translateX(300px); }
